--- a/test-project/src/content/docs/index.mdx
+++ b/test-project/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: SMS Onboarding
+title: SMS Onboarding 1
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
