--- a/vonage-sample-onboarding-test-project/src/content/docs/index.mdx
+++ b/vonage-sample-onboarding-test-project/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: SMS Onboarding 7
+title: SMS Onboarding
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
